--- a/Unit Convertor Application/app/src/main/res/values/strings.xml
+++ b/Unit Convertor Application/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
+<!-- res/values/strings.xml -->
 <resources>
-    <string name="app_name">UnitConvertorApplication</string>
+    <string name="app_name">UnitConverterApp</string>
+    <string name="select_category">Select Category</string>
+    <string name="select_conversion">Select Conversion</string>
+    <string name="convert">Convert</string>
+    <string-array name="unit_categories">
+        <item>Length</item>
+        <item>Time</item>
+        <item>Distance</item>
+        <!-- Add more categories as needed -->
+    </string-array>
+    <!-- Define string arrays for conversions within each category -->
+    <string-array name="length_conversions">
+        <item>Meters to Feet</item>
+        <item>Feet to Meters</item>
+        <!-- Add more conversions within the Length category -->
+    </string-array>
+    <string-array name="time_conversions">
+        <item>Seconds to Minutes</item>
+        <item>Minutes to Seconds</item>
+        <!-- Add more conversions within the Time category -->
+    </string-array>
+    <!-- Define string arrays for other categories similarly -->
 </resources>
